crates/analyzer/tests/snapshots/errors__map_one_type_arg.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: `Map` expects 2 generic arguments, but 1 was provided
  ┌─ [snippet]:3:10
  │
3 │   let x: Map<y>
  │          ^^^ - supplied 1 generic argument
  │          │    
  │          expects 2 generic arguments


